--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="송파구 위례동 퀵서비스 전문. 위례신도시, 위례중앙광장, 장지역 인근 신속한 배송을 원칙으로 합니다. 오토바이, 다마스, 라보 맞춤 배차 및 생활/상가/신도시 안심 배송.">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://wirye.8222quick.com/">
-
+    <link rel="icon" href="https://8222quick.com/img/favicon.png">
     <meta property="og:title" content="위례동 퀵서비스 | 24시 에이플러스 위례동퀵">
     <meta property="og:description" content="위례동 전지역 24시 실시간 배차, 위례신도시 대단지·중앙광장 상권 중심 신속한 배송 원칙">
     <meta property="og:url" content="https://wirye.8222quick.com/">
@@ -176,4 +176,5 @@
     </footer>
 </div>
 </body>
+
 </html>
